# spammer9k

./: CMakeLists.txt  README.md  config.json  spammer9k.service
docs/: Service emails.txt  newsletters example.json
src/: CAccount.cpp  CAccount.h  CConfig.cpp  CConfig.h  CLog.cpp  CLog.h  CMail.cpp  CMail.h  CMailDispatcher.cpp  CMailDispatcher.h  CMailHandler.cpp  CMailHandler.h  CMakeLists.txt  CNewsletter.cpp  CNewsletter.h  CProvider.cpp  CProvider.h  CRestListener.cpp  CRestListener.h  CSigHandler.cpp  CSigHandler.h  CStatistics.cpp  CStatistics.h  CTemplate.cpp  CTemplate.h  CTemplateManager.cpp  CTemplateManager.h  RestServer.cpp  RestServer.h  Singleton.h  Utils.cpp  Utils.h  main.cpp
src/argparse/: argparse.h
src/inja_/: inja.hpp
src/nlohmann/: json.hpp
src/sha1/: sha1.c  sha1.h
src/sqlite3/: sqlite3.h
templates/default_template/: base.html  element.html  row.html  structure.json
